--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿# 模板说明 https://github.com/github/gitignore
+# 模板说明 https://github.com/github/gitignore
 
 # Windows image file caches
 Thumbs.db
@@ -88,4 +88,3 @@ Public/dwz/
 Public/xheditor/
 Application/Runtime/
 Application/*.7z
-Application/Home/Conf/config.php
